--- a/themes/blank/layouts/_default/list.html
+++ b/themes/blank/layouts/_default/list.html
@@ -2,7 +2,11 @@
 
 <h1>Alle {{ .Section | humanize }} Beiträge</h1>
 
-{{ range .Pages }}
+{{ $post := where .Site.Pages "Type" "post" }}
+{{ $podcast := where .Site.Pages "Type" "podcast" }}
+{{ $entries := $post | union $podcast }}
+
+{{ range $entries.ByDate.Reverse }}
   {{ if (not .Params.Draft) }}
     <div id="{{.Title | urlize }}" class="entryLink">
       <a href="{{ .Permalink }}">{{ .Title }}</a> <i>geschrieben am {{ printf "%s, %d. %s %d" ( index $.Site.Data.de.days ( printf "%d" .Date.Weekday )) ( .Date.Day ) ( index $.Site.Data.de.month ( printf "%d" .Date.Month )) ( .Date.Year ) }} um {{ .Date.Format "15:04" }} Uhr.</i>
